[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/carWhite.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Character.gd" type="Script" id=2]
[ext_resource path="res://Assets/loop_1.wav" type="AudioStream" id=3]
[ext_resource path="res://Assets/crash.wav" type="AudioStream" id=4]
[ext_resource path="res://Assets/zap.wav" type="AudioStream" id=5]

[sub_resource type="CapsuleShape2D" id=1]
radius = 31.5032
height = 26.3879

[sub_resource type="CircleShape2D" id=2]

[node name="Character" type="Node2D"]
script = ExtResource( 2 )

[node name="KinematicBody2D" type="KinematicBody2D" parent="."]

[node name="startStop" type="AudioStreamPlayer2D" parent="KinematicBody2D"]
position = Vector2( -1.99026, -0.663422 )

[node name="crash" type="AudioStreamPlayer2D" parent="KinematicBody2D"]
stream = ExtResource( 4 )

[node name="zap" type="AudioStreamPlayer2D" parent="KinematicBody2D"]
stream = ExtResource( 5 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="KinematicBody2D"]
stream = ExtResource( 3 )

[node name="icon" type="Sprite" parent="KinematicBody2D"]
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D"]
position = Vector2( 0.323532, 0.323536 )
z_index = 50
shape = SubResource( 1 )

[node name="Label" type="Label" parent="KinematicBody2D"]
margin_right = 40.0
margin_bottom = 14.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Area2D" type="Area2D" parent="KinematicBody2D"]

[node name="CharacterCenter" type="CollisionShape2D" parent="KinematicBody2D/Area2D"]
shape = SubResource( 2 )

[node name="Camera2D" type="Camera2D" parent="KinematicBody2D"]
current = true
drag_margin_h_enabled = true
drag_margin_v_enabled = true

[node name="BatteryTimer" type="Timer" parent="."]
wait_time = 0.06
[connection signal="batteryDead" from="." to="." method="_on_Character_batteryDead"]
[connection signal="hullDead" from="." to="." method="_on_Character_hullDead"]
[connection signal="finished" from="KinematicBody2D/zap" to="." method="_on_zap_finished"]
[connection signal="timeout" from="BatteryTimer" to="." method="_on_BatteryTimer_timeout"]
